<?xml version="1.0"?>
<package format="2">
  <name>my_first_ros_pkg</name>
  <version>0.0.1</version>
  <description>The my_first_ros_pkg package</description>
  <license>Apache Lincense 2.0</license>
  <author email="sw980907@naver.com">Seungwon Oh</author>
  <maintainer email="sw980907@naver.com">Seungwon Oh</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export></export>
</package>
