<?xml version="1.0"?>
<package format="2">
    <name>my_subscriber</name>
    <version>0.0.0</version>
    <description>The my_subscriber package</description>

    <maintainer email="sw980907@naver.com">seungwon</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>my_publisher</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>my_publisher</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>my_publisher</exec_depend>

    <export>
    </export>
</package>